<resources>
    <string name="app_name">SpeedTracker</string>
    <string name="gps_disabled_msg">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="enable_btn_txt">Enable GPS</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="next_duration">Next Duration</string>
    <string name="current_duration">Current Duration</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="date">Date</string>
    <string name="start_tracking">START TRACKING</string>
    <string name="stop_tracking">STOP TRACKING</string>
    <string name="loading_please_wait">Loading... Please Wait...</string>
    <string name="warning_txt">Location Updates will not get written on file</string>
</resources>
